kubernetes/gateway-api/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: nucleo-gateway-class
spec:
  controllerName: traefik.io/gateway-controller
